Added Grid Page. Added Template Page. Updated Index.html and Style.css

--- a/html/index.html
+++ b/html/index.html
@@ -9,10 +9,44 @@
     <title>Random Document</title>
 </head>
 <body>
-    <div>
+    <div class="main-container">
         <header>
-            <h1>Lance's Random Page</h1>
+            <nav class="home-nav">
+                <div class="inner-nav">
+
+                    <div>
+                        <h2>Navigation</h2>
+                    </div>
+                    <div class="links">
+                        <a href="index.html">Home</a>
+                        <a href="grid.html">Grid</a>
+                        <a href="template.html">Template</a>
+                    </div>
+                    <!-- <div class="links">
+                        <div class="links-only">
+                        </div>
+                    </div> -->
+                </div>
+            </nav>
         </header>
+        <section class="content-container">
+            <div class="body-container bc-1">
+                <h3>Lorem Ipsum 01</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores itaque iste perspiciatis quisquam dicta ratione nostrum perferendis, facilis quidem omnis deserunt harum blanditiis et error. Accusamus similique veritatis quas.</p>
+            </div>
+            <div class="body-container bc-2">
+                <h3>Lorem Ipsum 02</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores itaque iste perspiciatis quisquam dicta ratione nostrum perferendis, facilis quidem omnis deserunt harum blanditiis et error. Accusamus similique veritatis quas.</p>
+            </div>
+            <div class="body-container bc-3">
+                <h3>Lorem Ipsum 03</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores itaque iste perspiciatis quisquam dicta ratione nostrum perferendis, facilis quidem omnis deserunt harum blanditiis et error. Accusamus similique veritatis quas.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores itaque iste perspiciatis quisquam dicta ratione nostrum perferendis, facilis quidem omnis deserunt harum blanditiis et error. Accusamus similique veritatis quas.</p>
+            </div>
+            <div class="body-container bc-4">
+                <h3>Lorem Ipsum 04</h3>
+            </div>
+        </section>
     </div>
 </body>
 </html>
