--- a/html/index.html
+++ b/html/index.html
@@ -4,49 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="style/style.css" />
-    <title>Random Document</title>
+    <link rel="stylesheet" href="style/style.css">
+    <title>Random Template Document</title>
 </head>
 <body>
-    <div class="main-container">
-        <header>
-            <nav class="home-nav">
-                <div class="inner-nav">
-
-                    <div>
-                        <h2>Navigation</h2>
-                    </div>
-                    <div class="links">
-                        <a href="index.html">Home</a>
-                        <a href="grid.html">Grid</a>
-                        <a href="template.html">Template</a>
-                    </div>
-                    <!-- <div class="links">
-                        <div class="links-only">
-                        </div>
-                    </div> -->
-                </div>
-            </nav>
-        </header>
-        <section class="content-container">
-            <div class="body-container bc-1">
-                <h3>Lorem Ipsum 01</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores itaque iste perspiciatis quisquam dicta ratione nostrum perferendis, facilis quidem omnis deserunt harum blanditiis et error. Accusamus similique veritatis quas.</p>
-            </div>
-            <div class="body-container bc-2">
-                <h3>Lorem Ipsum 02</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores itaque iste perspiciatis quisquam dicta ratione nostrum perferendis, facilis quidem omnis deserunt harum blanditiis et error. Accusamus similique veritatis quas.</p>
-            </div>
-            <div class="body-container bc-3">
-                <h3>Lorem Ipsum 03</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores itaque iste perspiciatis quisquam dicta ratione nostrum perferendis, facilis quidem omnis deserunt harum blanditiis et error. Accusamus similique veritatis quas.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores itaque iste perspiciatis quisquam dicta ratione nostrum perferendis, facilis quidem omnis deserunt harum blanditiis et error. Accusamus similique veritatis quas.</p>
-            </div>
-            <div class="body-container bc-4">
-                <h3>Lorem Ipsum 04</h3>
-            </div>
-        </section>
+    <nav class="template-zone green sticky-nav">
+        <ul class="main-nav">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="grid.html">Grid</a>
+            </li>
+            <li>
+                <a href="#">Projects</a>
+            </li>
+            <li class="push">
+                <a href="#">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div class="template-zone red cover-container">
+        <img class="cover-image" src="assets/coffee-images/10.png"/>
     </div>
+    <div class="template-zone blue project-container">
+        <div class="box"><img src='assets/coffee-images/1.png'/></div>
+        <div class="box"><img src='assets/coffee-images/2.png'/></div>
+        <div class="box"><img src='assets/coffee-images/3.png'/></div>
+        <div class="box"><img src='assets/coffee-images/4.png'/></div>
+        <div class="box"><img src='assets/coffee-images/5.png'/></div>
+        <div class="box"><img src='assets/coffee-images/6.png'/></div>
+        <div class="box"><img src='assets/coffee-images/7.png'/></div>
+        <div class="box"><img src='assets/coffee-images/8.png'/></div>
+    </div>
+    <footer class="template-zone yellow">Lance Madden</footer>
 </body>
 </html>
